[project]
name = "pycistarget"
version = "1.1"
description = "pycistarget is a python module to perform motif enrichment analysis in sets of regions with different tools and identify high confidence TF cistromes"
authors = [
    { name = "Seppe De Winter" },
    { name = "Carmen Bravo" },
]
license = { text = "Academic Non-commercial" }
readme = "README.rst"
requires-python = ">=3.8,<3.12"
dependencies = [
    "numpy<2.0.0",
    "pandas>=1.5,<2.0",
    "pyranges>=0.0.111,<0.1",
    "h5py>=3.10.0,<4",
    "ctxcore>=0.2.0,<0.3",
    "ipython>=8.0.0",
    "scikit-learn>=1.3.2,<2",
]

[project.scripts]
pycistarget = "pycistarget.cli.pycistarget:main"

[dependency-groups]
dev = [
    "mypy>=1.20.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
