[project]
name = "pycistarget"
version = "1.1"
description = "pycistarget is a python module to perform motif enrichment analysis in sets of regions with different tools and identify high confidence TF cistromes"
authors = [
    { name = "Seppe De Winter" },
    { name = "Carmen Bravo" },
]
license = { text = "Academic Non-commercial" }
readme = "README.rst"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy<2.0.0",
    "pandas>=1.5,<3",
    "pyranges>=0.0.111,<0.1",
    "h5py>=3.10.0,<4",
    "ctxcore>=0.2.0,<0.3",
    "ipython>=8.0.0",
    "scikit-learn>=1.3.2,<2",
    # ctxcore imports `attr` but does not declare attrs as a dependency.
    "attrs",
    # pyranges and ctxcore import the deprecated pkg_resources, which is no
    # longer bundled in Python 3.12+ venvs and was removed from setuptools 81.
    "setuptools<81",
]

[project.scripts]
pycistarget = "pycistarget.cli.pycistarget:main"

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
